# cookie

./: .gitignore  CMakeLists.txt
include/: matrix.hpp  string.hpp
include/container/: array.hpp  list.hpp  node.hpp
include/matrix/: matrix2D.hpp  matrix3D.hpp  matrix4D.hpp
source/: string.cpp
source/container/: array.cpp  list.cpp  node.cpp
source/cookie_string/: string.cpp  string.hpp
test/: CMakeLists.txt  string.cpp
